# Ledis

./: .gitignore  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md
ledis/: __init__.py  app.py  cli.py  config.py  datastructures.py  exceptions.py  ledis.py  utils.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_ledis.py  test_ledis_delete.py  test_ledis_expire.py  test_ledis_get.py  test_ledis_restore.py  test_ledis_sadd.py  test_ledis_save.py  test_ledis_set.py  test_ledis_sinter.py  test_ledis_smembers.py  test_ledis_srem.py  test_ledis_ttl.py
