[tool.poetry]
name = "project_ledis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.2"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
